tests/patching/errors/save_wrong_path.dby
import std.buffer as buf
let b = buf.new(1)
buf.save(123, b)
